--- a/src/lithium/doc/lithium12.tex
+++ b/src/lithium/doc/lithium12.tex
@@ -174,7 +174,7 @@ with the steady state
 \end{equation}
 We have to solve an equation in the shape of
 \begin{equation}
-	\partial_t \Li{x} = \Lambda_x + V_x \left(1-\alpha\right) - k_l^x \Li{x} \;\; (V_x = E_0 \kappa_x \proton)
+	\partial_t \Li{x} = \Lambda_x + V_x \left(1-\alpha\right) - k_l^x \Li{x} \;\; (V_x = E_0 \kappa_x \proton,\;\Lambda_x = k_l^x \theta_x)
 \end{equation}
 so that
 \begin{equation}
