start study function

--- a/src/lithium/doc/lithium12.tex
+++ b/src/lithium/doc/lithium12.tex
@@ -275,5 +275,20 @@ Globally, the bell-shaped function is peaked for
 	\tau_{max} = \dfrac{\ln(\sigma_h)}{\sigma_h-1}\;\;\;(\tau_{max}=1 \text{ if } \sigma_h=1)
 \end{equation}
 Since the prefactor might be different, there is a possibility to have a significant isotopic separation before $\tau_{max}$ is reached.
+
+\subsection{Rewriting}
+We use the expression to rewrite
+\begin{equation}
+	\Li{x} =  \beta\LiOut{x}\left\lbrack  \left(1-e^{ -\tau }\right) + 
+	\underbrace{
+	\dfrac{J_x k_p^x}{k_l}
+	\dfrac{E_0}{\beta}
+	\dfrac{\proton \alpha_\infty}{1+J_6'+J_7'}
+	}_{\phi_x}
+	\left[
+	 \dfrac{e^{-\sigma_h\tau} - e^{-\tau} }{1 - \sigma_h}\right]
+	 \right\rbrack
+\end{equation}
+
 \end{document}
 
