--- a/src/lithium/doc/lithium12.tex
+++ b/src/lithium/doc/lithium12.tex
@@ -295,11 +295,14 @@ so that
 \begin{equation}
 	\dfrac{\Li{7} }{\Li{6}} = \dfrac{\LiOut{7} }{\LiOut{6}} 
 	\dfrac{\left(1-e^{ -\tau }\right) + \phi_7 B\left(\tau,\sigma_h\right)}{\left(1-e^{ -\tau }\right) + \phi_6 B\left(\tau,\sigma_h\right) } 
+	= \rho_7 \; \Omega\left(\tau,\phi_6,\phi_7,\sigma\right)
 \end{equation}
-and for short times
+with
 \begin{equation}
-	\dfrac{\Li{7} }{\Li{6}} - 1 \simeq \dfrac{\phi_7-\phi_6}{1+\phi_6} \left(1-\dfrac{\sigma}{2\left(1+\phi_6\right)}\tau\right)
-\end{equation}
+	\Omega\left(\tau,\phi_6,\phi_7,\sigma\right) \simeq
+	\dfrac{1+\phi_7}{1+\phi_6}
+	- \dfrac{\phi_7-\phi_6}{2\left(1+\phi_6\right)^2} \sigma \tau
+\end{equation}	
 
 \end{document}
 
