--- a/src/lithium/doc/lithium12.tex
+++ b/src/lithium/doc/lithium12.tex
@@ -325,5 +325,17 @@ and
 	}
 \end{equation}
 
+\begin{equation}
+{
+	\left\lbrack\dfrac{\ratioLi}{\ratioLi_{out}} - 1 \right\rbrack =
+	 \dfrac{10^{-3}\left(\deltaLi-\deltaLi_{out}\right)}{1+10^{-3}\deltaLi_{out}} = \tilde\Omega\left(\tau,\phi_6,\phi_7,\sigma\right)
+}
+\end{equation}
+and
+\begin{equation}
+	\tilde\Omega\left(\tau,\phi_6,\phi_7,\sigma\right) \simeq \dfrac{\phi_7-\phi_6}{1+\phi_6} - \dfrac{\phi_7-\phi_6}{2\left(1+\phi_6\right)^2} \sigma \tau
+\end{equation}
+
+
 \end{document}
 
