--- a/src/lithium/doc/lithium12.tex
+++ b/src/lithium/doc/lithium12.tex
@@ -336,6 +336,10 @@ and
 	\tilde\Omega\left(\tau,\phi_6,\phi_7,\sigma\right) \simeq \dfrac{\phi_7-\phi_6}{1+\phi_6} - \dfrac{\phi_7-\phi_6}{2\left(1+\phi_6\right)^2} \sigma \tau
 \end{equation}
 
+We have
+\begin{equation}
+	\tilde\Omega = \dfrac{\left(\phi_7-\phi_6\right)B\left(\tau,\sigma_h\right)}{\left(1-e^{ -\tau }\right) + \phi_6 B\left(\tau,\sigma_h\right)}
+\end{equation}	
 
 \end{document}
 
