--- a/src/lithium/doc/lithium12.tex
+++ b/src/lithium/doc/lithium12.tex
@@ -351,6 +351,7 @@ we get
 	 = \gamma_7 \dfrac{\phi_6}{1+\phi_6} \left[ \dfrac{\left(1+\phi_6\right)B\left(\tau,\sigma_h\right) }{\left(1-e^{ -\tau }\right) + \phi_6 B\left(\tau,\sigma_h\right)} \right]
 \end{equation}
 
+\subsection{special cases}
 When $\sigma\to1$, we have
 \begin{equation}
 	B\left(\tau,\sigma\to1\right) = - \left[ \dfrac{e^{-\sigma\tau}-e^{-\tau}}{\sigma-1} \right] 
@@ -372,6 +373,16 @@ When $\sigma\to1$, we have
 	\right]	
 \end{equation}
 
-
+\subsection{variations}
+The function
+\begin{equation}
+	\tilde\Omega = \dfrac{\left(\phi_7-\phi_6\right)B\left(\tau,\sigma_h\right)}{\left(1-e^{ -\tau }\right) + \phi_6 B\left(\tau,\sigma_h\right)}
+	= \gamma_7 \dfrac{\phi_6}{1+\phi_6} \left[ \dfrac{\left(1+\phi_6\right)B\left(\tau,\sigma_h\right) }{\left(1-e^{ -\tau }\right) + \phi_6 B\left(\tau,\sigma_h\right)} \right]
+\end{equation}
+varies as
+\begin{equation}
+	\omega = \left(1+\phi_6\right)\dfrac{B\left(\tau,\sigma_h\right)}{\left(1-e^{ -\tau }\right) + \phi_6 B\left(\tau,\sigma_h\right)}
+\end{equation}
+which is decreasing for any $\sigma>0,\phi_6>0$.
 \end{document}
 
