--- a/src/lithium/doc/wip.tex
+++ b/src/lithium/doc/wip.tex
@@ -25,4 +25,10 @@
 \item réécrire le modèle avec plus d'élégance sur les constantes.
 \end{itemize}
 
+\centerline{**********}
+
+\begin{itemize}
+\item
+\end{itemize}
+
 \end{document}
